# pi-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml
app/: cache.py  config.py  contract.py  http.py  main.py  weather_codes.py
app/sources/: calendar.py  holidays.py  nws.py  weather.py
deploy/: 20auto-upgrades  50unattended-upgrades  README.md  chromium-kiosk.service  chromium-reload.service  chromium-reload.timer  getty-autologin.conf  journald.conf  kiosk.service  nightly-halt.service  nightly-halt.sh  nightly-halt.timer  pi-dashboard.service  wifi-watchdog.service
deploy/labwc/: autostart  rc.xml
design-mocks/: CONTENT.md  index.html  instrument-hud-d-empty.html  instrument-hud-d-winter.html  instrument-hud-d.html  neo-brutalist.html  paper-editorial.html  soft-scandi.html  swiss-mono.html
static/: app.js  app.test.js  data.json  index.html  jsconfig.json  style.css
static/themes/: catppuccin.css  gruvbox.css  nord.css  synthwave.css
tests/: conftest.py  test_api.py  test_cache.py  test_calendar.py  test_holidays.py  test_nws.py  test_refresh.py  test_smoke.py  test_static.py  test_theme.py  test_weather.py  test_weather_codes.py
tools/: mockup.py
